[WIP] adding netlify form

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "icons",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://strangehill.github.io/dymantic2",
+  "homepage": "https://add-netlify-form--customizer-form-v1.netlify.com/",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
